  * Fish Shell (PR#422)
  * Roboconf (PR#449)
  * Test Anything Protocol (PR#428)
  * Shen (PR#385)
  * Component Pascal (PR#437)
  * SuperCollider (PR#472)
  * Shell consoles (Tcsh, PowerShell, MSDOS) (PR#479)
  * Elm and J (PR#452)
  * Crmsh (PR#440)
  * Praat (PR#492)

- Added styles:

  * Lovelace (PR#456)
  * Algol and Algol-nu (#1090)

- Added formatters:

  * IRC (PR#458)

- Improved performance of the HTML formatter for long lines (PR#504).

- Updated autopygmentize script (PR#445)

- Fixed style inheritance for non-standard token types in HTML output.

- Added support for async/await to Python 3 lexer.

- Rewrote linenos option for TerminalFormatter (it's better, but slightly
  different output than before).  (#1147)

- Javascript lexer now supports most of ES6.  (#1100)

- Cocoa builtins updated for iOS 8.1 (PR#433)

- Combined BashSessionLexer and ShellSessionLexer, new version should support
  the prompt styles of either.

- Added option to pygmentize to show a full traceback on exceptions.


Version 2.0.3
-------------
(not released yet)

- Fix highlighting of certain IRC logs formats (#1076).


Version 2.0.2
-------------
(released Jan 20, 2015)

- Fix Python tracebacks getting duplicated in the console lexer (#1068).

- Backquote-delimited identifiers are now recognized in F# (#1062).


Version 2.0.1
-------------
(released Nov 10, 2014)

- Fix an encoding issue when using ``pygmentize`` with the ``-o`` option.


Version 2.0
-----------
(released Nov 9, 2014)

- Default lexer encoding is now "guess", i.e. UTF-8 / Locale / Latin1 is
  tried in that order.

- Major update to Swift lexer (PR#410).

- Multiple fixes to lexer guessing in conflicting cases:

  * recognize HTML5 by doctype
  * recognize XML by XML declaration
  * don't recognize C/C++ as SystemVerilog

- Simplified regexes and builtin lists.


Version 2.0rc1
--------------
(released Oct 16, 2014)

- Dropped Python 2.4 and 2.5 compatibility.  This is in favor of single-source