@@ -42,6 +42,8 @@ Version 2.1
 - Added formatters:
 
   * IRC (PR#458)
+  * True color (24-bit) terminal ANSI sequences (#1142)
+    (formatter alias: "16m")
 
 - Improved performance of the HTML formatter for long lines (PR#504).
 
